--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.teleclinic.bulent.smartimageview.MainActivity">
 
     <com.teleclinic.bulent.smartimageview.SmartImageViewLayout
-        android:id="@+id/images"
-        android:layout_width="72dp"
-        android:layout_height="72dp"
-        app:shape="SQUARE">
+        android:id="@+id/images1"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_margin="24dp"
+        android:layout_gravity="center"
+        app:shape="SQUARE"/>
 
-    </com.teleclinic.bulent.smartimageview.SmartImageViewLayout>
+    <com.teleclinic.bulent.smartimageview.SmartImageViewLayout
+        android:id="@+id/images2"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_margin="24dp"
+        android:layout_gravity="center"
+        app:shape="CIRCLE"/>
 
-</android.support.constraint.ConstraintLayout>
+    <com.teleclinic.bulent.smartimageview.SmartImageViewLayout
+        android:id="@+id/images3"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_margin="24dp"
+        android:layout_gravity="center"
+        app:shape="CIRCLE"/>
+
+</LinearLayout>
