--- a/smartimageview2/src/main/res/layout/activity_smart_image_view.xml
+++ b/smartimageview2/src/main/res/layout/activity_smart_image_view.xml
@@ -5,6 +5,7 @@
     android:id="@+id/cardView"
     android:layout_width="10dp"
     android:layout_height="10dp"
+    app:cardElevation="0dp"
     android:padding="0dp">
 
     <LinearLayout
